@@ -1,5 +1,8 @@
 ======= Change History ========
 
+- Fixed: Screenshot file still sent even if deleted (issue 186).
+- Fixed: Video division by zero (issue 189)
+
 --- Ver. 1.4.1 ---
 
 - New: Added an ability to preview OGG video files in Error Report Details dialog.
